# ax-hackathon

./: .gitignore  README.md
삼일회계법인/submission/: AGENTS.md  README.md  pyproject.toml
삼일회계법인/submission/.codex/: hooks.json
삼일회계법인/submission/docs/: adopted-candidate-alignment.md  five-questions-summary.md  submission-artifact-storage-contract.md
삼일회계법인/submission/input/pytest-failure/: spec.md  state.md
삼일회계법인/submission/input/pytest-first/: context.md  spec.md  state.md
삼일회계법인/submission/input/pytest-injection/: context.md  independence_rules.json  non_audit_services.csv  spec.md  state.md
삼일회계법인/submission/input/pytest-learning/: audit_clients.csv  context.md  spec.md  state.md
삼일회계법인/submission/input/pytest-second/: context.md  non_audit_services.csv  spec.md  state.md
삼일회계법인/submission/logs/: submission-evidence.jsonl
삼일회계법인/submission/output/pytest-failure/: error.md
삼일회계법인/submission/output/pytest-first/: review.md
삼일회계법인/submission/output/pytest-injection/: report.md  review.md
삼일회계법인/submission/output/pytest-learning/: report.md  review.md
삼일회계법인/submission/output/pytest-second/: review.md
삼일회계법인/submission/src/: AGENTS.md
삼일회계법인/submission/src/.codex-plugin/: plugin.json
삼일회계법인/submission/src/config/: samil-screening-config.json
삼일회계법인/submission/state/memory/: learning.md
삼일회계법인/submission/tests/: test_independence_screen_cli.py  test_learning_runtime.py  test_learning_wrapper.py  test_learning_wrapper_args.py  test_markdown_report_cli.py  test_save_log.py  test_submission_contract.py
삼일회계법인/submission/tools/: save_log.py
(+95 files in other folders)
