[project]
name = "samil-independence-screening-submission"
version = "0.1.0"
description = "AX hackathon submission for Samil PwC independence screening."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.31",
    "pytest>=8",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src/bin"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
extraPaths = ["src/bin"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportAny = false

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]
